SCAT-5118 new column for supplier selection justification (#353)